efs.tf
# Define the EFS file system
resource "aws_efs_file_system" "project_efs" {
  creation_token = "project-efs"
  lifecycle_policy {
    # Specify lifecycle policy if needed
    transition_to_ia = "AFTER_7_DAYS"
  }
}
<<<<<<< HEAD

=======
>>>>>>> 03f37bc36c9de20c4f12663bab6a7f115d12d45e
# Define the mount targets for the EFS file system
resource "aws_efs_mount_target" "project" {
  file_system_id         = aws_efs_file_system.project_efs.id
  subnet_id              = aws_subnet.team1.id
}
resource "aws_vpc" "project"{
    cidr_block = "10.0.0.0/16"
}
resource "aws_subnet" "team1" {
  vpc_id            = aws_vpc.project.id
  availability_zone = "us-east-1a"
  cidr_block        = "10.0.1.0/24"
}
